--- a/src/wav/converter.html
+++ b/src/wav/converter.html
@@ -5,30 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WAV to MP3 Converter</title>
   <script src="https://cdn.jsdelivr.net/npm/lamejs@1.2.1/lame.min.js"></script>
+  <link rel="stylesheet" href="theme.css">
   <style>
-    body {
-      font-family: -apple-system, sans-serif;
-      background: #f0f2f5;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-
+    /* Page-specific styles */
     .card {
-      background: white;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
       text-align: center;
-      width: 350px;
-    }
-
-    h1 {
-      margin-top: 0;
-      color: #333;
-      font-size: 1.5rem;
     }
 
     .drop-zone {
@@ -42,7 +23,7 @@
     }
 
     .drop-zone:hover, .drop-zone.dragover {
-      border-color: #007bff;
+      border-color: var(--primary);
       background: #eef6ff;
     }
 
@@ -73,13 +54,13 @@
     }
 
     .processing {
-      color: #007bff;
+      color: var(--primary);
     }
 
     /* Spinner */
     .loader {
       border: 3px solid #f3f3f3;
-      border-top: 3px solid #007bff;
+      border-top: 3px solid var(--primary);
       border-radius: 50%;
       width: 20px;
       height: 20px;
