--- a/src/wav/generator.html
+++ b/src/wav/generator.html
@@ -4,40 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notification Sound Designer</title>
+  <link rel="stylesheet" href="theme.css">
   <style>
-    :root {
-      --primary: #007bff;
-      --bg: #f4f7f6;
-      --card: #ffffff;
-      --text: #333;
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      margin: 0;
-    }
-
-    .container {
-      background: var(--card);
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
-      width: 100%;
-      max-width: 400px;
-    }
-
-    h1 {
-      margin-top: 0;
-      font-size: 1.5rem;
-      text-align: center;
-      margin-bottom: 1.5rem;
-    }
+    /* Page-specific styles */
 
     .control-group {
       margin-bottom: 1.25rem;
@@ -51,53 +20,9 @@
       font-weight: 500;
     }
 
-    .value-display {
-      color: var(--primary);
-      font-family: monospace;
-    }
+    /* .value-display uses shared theme */
 
-    input[type=range] {
-      width: 100%;
-      cursor: pointer;
-    }
-
-    .btn-row {
-      display: flex;
-      gap: 10px;
-      margin-top: 2rem;
-    }
-
-    button {
-      flex: 1;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: transform 0.1s, opacity 0.2s;
-    }
-
-    button:active {
-      transform: scale(0.96);
-    }
-
-    #playBtn {
-      background: #e2e6ea;
-      color: #333;
-    }
-
-    #playBtn:hover {
-      background: #dbe0e5;
-    }
-
-    #downloadBtn {
-      background: var(--primary);
-      color: white;
-    }
-
-    #downloadBtn:hover {
-      opacity: 0.9;
-    }
+    /* Button row/layout styles moved to theme.css for consistency */
 
     /* Visualizer (Simple) */
     #visualizer {
@@ -155,8 +80,8 @@
   </div>
 
   <div class="btn-row">
-    <button id="playBtn">▶ Play Preview</button>
-    <button id="downloadBtn">⬇ Download WAV</button>
+    <button id="playBtn" class="btn-primary">▶ Play</button>
+    <button id="downloadBtn" class="btn-primary btn-secondary">⬇ WAV</button>
   </div>
 
   <div id="visualizer">
